# awsdoc-ja-search

./: .gitignore  LICENSE  README.md  aws-jp-doc-crawler.ipynb  delete-document.ipynb
cdk/: README.md  package-lock.json  package.json
cdk/lambda/: getParameter.js  package-lock.json  package.json
cdk/lib/: cdk-stack.d.ts  cdk-stack.ts
cdk/lib/stack/: crawler-stack.d.ts  crawler-stack.ts  indexer-stack.d.ts  indexer-stack.ts
cdk/test/: cdk.test.ts
doc-crawler/: Dockerfile  docker-compose.yml
doc-crawler/app/: crawler.py  helper.py  pyproject.toml  s3util.py  ssmutil.py
doc-indexer/: Dockerfile  docker-compose.yml
doc-indexer/app/: algolia.py  helper.py  indexer.py  pyproject.toml  s3util.py  test.py
website/: .gitignore  README.md  package-lock.json  package.json
website/amplify/.config/: project-config.json
website/public/: index.html  manifest.json
website/src/: App.css  App.js  index.js
website/src/components/: App.css  App.js  Dummy.js  Header.js  Hit.js  SearchByAlgolia.css  SearchByAlgolia.js
