[tool.poetry]
name = "doc-indexer"
version = "0.1.0"
description = "Algolia indexer for AWS Document Japanese"
authors = ["Jun Ohashi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.18"
lxml = "^4.5.1"
cssselect = "^1.1.0"
jsonlines = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
